--- a/src/components/Board/board.scss
+++ b/src/components/Board/board.scss
@@ -1,10 +1,10 @@
-.board {}
-
-.board__title {}
-
 .board__items {
   display: flex;
   margin: 0.75rem -0.75rem;
+}
+
+.board__items .ant-row {
+  width: 100%;
 }
 
 .board__browse {
