--- a/src/components/Header/User/user.scss
+++ b/src/components/Header/User/user.scss
@@ -36,4 +36,16 @@
 .user__name {
   font-size: 1rem;
   font-weight: 500;
+  cursor: pointer;
+}
+
+// OVERRIDE DEFAULT ANTD STYLES
+.ant-drawer-content-wrapper {
+  width: 420px !important;
+}
+
+@media only screen and (max-width: 519px) {
+  .ant-drawer-content-wrapper {
+    width: 100% !important;
+  }
 }
